crates/test-files/fixtures/compile_errors/invalid_repeat_length.fe
contract Foo {
    pub fn foo() {
        let my_array: Array<u256, 42> = [0; true]
    }
}